# cq2rdf

./: .envrc  .gitignore  .gitlab-ci.yml  CINETV_FRBROO_MAPPING.md  ChangeLog.md  LICENSE  Makefile  README.fr.md  README.md  cq2rdf.cabal  create-release.sh  default.nix  example-queries.yaml  hdt.nix  hie.yaml  package.yaml  release.nix  shell.nix  stack.yaml  void.base.ttl
.vim/: coc-settings.json
app/: Main.hs
config/: cinetv.persistentmodels
nix/: hdt.nix  rdflib-hdt.nix
scripts/: bootstrapBlazegraph.nix  bootstrapBlazegraph.sh  generateVoidDataset.nix  generateVoidDataset.sh  loadCmtqBlazegraph.sh  startBlazegraph.nix  startBlazegraph.sh  test_sparql_queries.nix  test_sparql_queries.py  test_sparql_queries.sh
src/: Import.hs  Model.hs  Namespaces.hs  Run.hs  Runv1.hs  Types.hs  Util.hs
src/CineTV/RDF/: Conversion.hs  Void.hs  Void.hs.bak
src/CineTV/RDF/Conversion/: FilmoDureesOriginales.hs  FilmoTitres.hs  GenreCategory.hs  Language.hs  LegalBody.hs  Movie.hs  MovieCategory.hs  MovieDirector.hs  MovieGeneric.hs  MovieLanguage.hs  MovieLocation.hs  MovieResume.hs  Person.hs  Place.hs  Role.hs
src/Conversion/: CineTV.hs
src/Conversion/CineTV/: FilmoDureesOriginales.hs  FilmoTitres.hs  GenreCategory.hs  Language.hs  LegalBody.hs  Movie.hs  MovieCategory.hs  MovieDirector.hs  MovieGeneric.hs  MovieLanguage.hs  MovieLocation.hs  MovieResume.hs  Person.hs  Place.hs  Role.hs
src/Data/: CQLOD.hs
src/Data/CQLOD/RDF/: Void.hs
src/Data/CQLOD/Readers/: CineTV.hs
src/Data/CQLOD/Readers/CineTV/: Filmo.hs  FilmoDureesOriginales.hs  FilmoGenerique.hs  FilmoGenresCategories.hs  FilmoLangue.hs  FilmoLienWikidata.hs  FilmoPays.hs  FilmoRealisation.hs  FilmoResume.hs  FilmoTitres.hs  FilmoType.hs  Fonction.hs  GenresCategoriesLienWikidata.hs  Langue.hs  LangueLienWikidata.hs  Nom.hs  NomLienWikidata.hs  Pays.hs  PaysLienWikidata.hs  Sujet.hs
src/Data/CQLOD/Writers/: RDF.hs
src/Data/RDF/: Extended.hs  State.hs  Vocabulary.hs  Void.hs
src/Data/RDF/Query/: Extended.hs
src/Data/RDF/Types/: Extended.hs
src/Data/RDF/Vocabulary/: CRM.hs  DBpedia.hs  DCTerms.hs  FRBRoo.hs  Foaf.hs  Formats.hs  OWL.hs  QUDT.hs  Rdf.hs  Rdfs.hs  Schema.hs  Void.hs  Wikidata.hs  XSD.hs
src/Run/: AdlibToRdf.hs  CinetvToRdf.hs  GenerateVoid.hs
src/SW/: Vocabulary.hs
src/SW/Vocabulary/: CRM.hs  DBpedia.hs  DCTerms.hs  FRBRoo.hs  Foaf.hs  Formats.hs  OWL.hs  Rdf.hs  Rdfs.hs  Void.hs  Wikidata.hs  XSD.hs
test/: UtilSpec.hs
test/CineTV/RDF/: VoidSpec.hs
test/CineTV/RDF/Conversion/: FilmoDureesOriginalesSpec.hs  FilmoTitresSpec.hs  GenreCategorySpec.hs  LanguageSpec.hs  LegalBodySpec.hs  MovieCategorySpec.hs  MovieDirectorSpec.hs  MovieGenericSpec.hs  MovieLanguageSpec.hs  MovieLocationSpec.hs  MovieResumeSpec.hs  MovieSpec.hs  PersonSpec.hs  PlaceSpec.hs  RoleSpec.hs
test/Conversion/CineTV/: FilmoDureesOriginalesSpec.hs  FilmoTitresSpec.hs  GenreCategorySpec.hs  LanguageSpec.hs  LegalBodySpec.hs  MovieCategorySpec.hs  MovieDirectorSpec.hs  MovieGenericSpec.hs  MovieLanguageSpec.hs  MovieLocationSpec.hs  MovieResumeSpec.hs  MovieSpec.hs  PersonSpec.hs  PlaceSpec.hs  RoleSpec.hs
test/Data/CQLOD/Readers/: CineTVSpec.hs
test/Data/CQLOD/Writers/: RDFSpec.hs
test/Data/RDF/Types/: ExtendedSpec.hs
test/Test/Hspec/Expectations/: Extended.hs
